# intel-8080-emulator-cpp

./: CMakeLists.txt  Display.cpp  Display.h  Emulator.cpp  Emulator.h  Intel8080.cpp  Intel8080.h  Memory.h  Opcodes_ALU.cpp  Opcodes_System.cpp  README.md  bus.cpp  bus.h  cpu.cpp  cpu.h  debug.h  emulator.cpp  emulator.h  hardware.h  machine_io.cpp  machine_io.h  main.cpp  opcodes.cpp  opcodes.h  opcodes_arithmetic.cpp  opcodes_branch.cpp  opcodes_logical.cpp  opcodes_move.cpp  run.sh  todo.md
.cache/clangd/index/: Bus.cpp.991C033DE970E1A9.idx  Bus.cpp.9F02F2785789166D.idx  Bus.h.175067FCD28462EC.idx  Bus.h.7C55BF47C7A8D347.idx  CPU.cpp.C4018F2D34D878C0.idx  CPU.h.1B671D435167B0A0.idx  Display.cpp.18CB2D77CC465387.idx  Display.cpp.8343F98DA34D2F4E.idx  Display.h.72ED5035BCB1E9B7.idx  Display.h.AA43CCBD53936394.idx  Emulator.cpp.47826406A6F801FA.idx  Emulator.cpp.C0752DEC41800F97.idx  Emulator.h.B5924E6018A99F39.idx  Emulator.h.FA2984FF88083057.idx  Intel8080.cpp.2E5E88A09F8F1A6E.idx  Intel8080.cpp.C23289C9441D3B06.idx  Intel8080.h.0FD91EC89F5BD9DE.idx  Intel8080.h.C76CDE802894747E.idx  MachineBus.h.76C61A81E765D68E.idx  Memory.cpp.259AA86E3154B507.idx  Memory.cpp.3E547100D75D0754.idx  Memory.h.D015A03241BBD80A.idx  Memory.h.F44FD4AC8EF654FD.idx  Opcode_Table.cpp.19A6D63D97B52257.idx  Opcode_Table.cpp.C6220F655601BB6B.idx  Opcodes.inc.904052438F8336E4.idx  Opcodes_ALU.cpp.7C558EEE6F815CEB.idx  Opcodes_ALU.cpp.86D578C086E5216F.idx  Opcodes_Move.cpp.C12FC80D893B5870.idx  Opcodes_Move.cpp.FC29E8CE6EB53EA1.idx  Opcodes_System.cpp.72EF52FEE7677F64.idx  Opcodes_System.cpp.F9A73EE39D9423C9.idx  bus.cpp.4A0BCAE11AA5DDFE.idx  bus.h.85DC56D2CA112861.idx  bus.h.DD9C251FB8FE40E5.idx  cabinet.cpp.3D26BB26AA6F1E81.idx  cabinet.h.87C028C7E81DE170.idx  cpu.cpp.1C7DC437D0A73AC4.idx  cpu.cpp.850634403F2FC320.idx  cpu.h.0D96725185EF3B2D.idx  (+27 more)
.zed/: debug.json  settings.json  tasks.json
src/: Bus.cpp  Bus.h  CPU.cpp  CPU.h  Display.cpp  Display.h  Emulator.cpp  Emulator.h  Intel8080.cpp  Intel8080.h  LRescue.h  MachineBus.h  Memory.cpp  Memory.h  Opcode_Table.cpp  Opcodes_Move.cpp  Opcodes_System.cpp  SpaceInvaders.h  main.cpp
src/core/: CPU.cpp  Emulator.cpp  Emulator.h  MachineConfig.h
src/games/: GameRegistry.cpp  GameRegistry.h  LRescue.cpp  LRescue.h  SpaceInvaders.cpp  SpaceInvaders.h
src/tools/: CpuDiagnostics.cpp  CpuDiagnostics.h
src/ui/: Display.cpp  Display.h  MenuScreen.cpp  MenuScreen.h  font8x8_basic.h
tests/: CMakeLists.txt  test_opcodes.cpp
